--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,3 +27,4 @@ jobs:
           docker-compose build
           docker-compose up --build --no-deps --force-recreate -d ftps_server
           docker image prune -f
+          exit 0
