--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - PORT=2121
     volumes:
-      - /ftp_server_implementation/image_storage:/app/mnt/vfs # new line
+      - /mnt/vfs:/app/image_storage # new line
     restart: always
     container_name: my_app_container
     healthcheck:
